# vyralabs

./: .gitignore  .npmrc  README.md  dashboard.html  index.html  journal.html  package-lock.json  package.json  plan.md  skills-lock.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/skills/container-lines/: SKILL.md
.claude/skills/redesign-existing-projects/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: metrics.ts
collector/: Cargo.toml  rustfmt.toml
collector/deploy/: RUN.md  collector.service
collector/src/: blockproduction.rs  config.rs  datapoints.rs  derive.rs  event.rs  fetch.rs  lib.rs  main.rs  monitor.rs  osstats.rs  redact.rs  rpc.rs  schema.rs  snapshot.rs  state.rs  voteaccount.rs  window.rs
content/journal/: 001-jito-4.1.1-to-4.2-upgrade.mdx  002-testnet-consensus-stall-and-restart.mdx
docs/: dashboard.md
src/: App.tsx  NetworkMenu.tsx  content.ts  index.css  mdx.d.ts  motionFeatures.ts
src/dashboard/: Dashboard.tsx  blockGroups.ts  config.ts  demoBlocks.ts  fixtureSource.ts  format.ts  health.ts  main.tsx  parse.test.ts  parse.ts  types.ts
src/dashboard/charts/: RadialChart.tsx  TimeSeriesChart.tsx  echarts.ts  palette.ts
src/dashboard/components/: AwaitingState.tsx  Banner.tsx  BlocksPerEpoch.tsx  Disclaimer.tsx  EpochCard.tsx  EventFeed.tsx  Freshness.tsx  InfoTip.tsx  LeaderSlots.tsx  LeaderTimeline.tsx  Missing.tsx  NetworkStrip.tsx  NodeCaughtUpStrip.tsx  PubkeyChip.tsx  RecentVotes.tsx  Sparkline.tsx  (+8 more)
src/journal/: Chrome.tsx  Index.tsx  Post.tsx  date.ts  main.tsx  posts.ts  postsMeta.ts
(+8 files in other folders)
