[package]
name = "collector"
version = "0.1.0"
edition = "2021"
description = "Vyra validator status collector: pure snapshot assembly over raw source outputs."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
